--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bingwp",
   "version": "1.0.8",
   "license": "MIT",
-  "bin": "dist/cli.tsx",
+  "bin": "dist/cli.js",
   "type": "module",
   "engines": {
     "node": ">=16"
