--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "dist"
   ],
   "dependencies": {
+    "@folder/xdg": "^4.0.1",
+    "dayjs": "^1.11.10",
+    "image-downloader": "^4.3.0",
     "ink": "^4.1.0",
     "meow": "^11.0.0",
     "react": "^18.2.0",
